// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`open api parser axle docs 1`] = `
{
  "definitionFiles": {
    "accounts.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "GetAccount": {
            "auth": false,
            "display-name": "Get Account",
            "docs": "The Get Account method will return an Account object including high-level account information (e.g., name) and any children objects (e.g., Policies) associated with the Account. Please note that this method will NOT refresh the Account object.",
            "examples": [
              {
                "headers": {
                  "x-client-id": "x-client-id",
                  "x-client-secret": "x-client-secret",
                },
                "path-parameters": {
                  "id": "id",
                },
                "response": {
                  "body": {
                    "data": {
                      "carrier": "carrier",
                      "createdAt": "createdAt",
                      "email": "email",
                      "firstName": "firstName",
                      "id": "id",
                      "lastName": "lastName",
                      "modifiedAt": "modifiedAt",
                      "phone": "phone",
                      "policies": [
                        "policies",
                      ],
                      "refreshedAt": "refreshedAt",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/accounts/{id}",
            "path-parameters": {
              "id": {
                "docs": "The unique ID for the requested account. Returned as part of the Token Exchange flow in exchangeToken.",
                "type": "string",
              },
            },
            "request": {
              "headers": {
                "x-client-id": {
                  "docs": "Your client ID. This will be shared with you during onboarding.",
                  "name": "clientId",
                  "type": "string",
                },
                "x-client-secret": {
                  "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
                  "name": "clientSecret",
                  "type": "string",
                },
              },
              "name": "GetAccountRequest",
              "query-parameters": {
                "expand": {
                  "docs": "Set to *true* if you would like to expand related entities (e.g., account, policy). Defaults to *false*.",
                  "type": "optional<boolean>",
                },
              },
            },
            "response": {
              "docs": "",
              "type": "GetAccountResponse",
            },
          },
        },
      },
      "types": {
        "Account": {
          "docs": "An Account represents an account with an insurance carrier and includes high-level account information (e.g. name) and any Policy objects associated with the Account.",
          "properties": {
            "carrier": "string",
            "createdAt": "string",
            "email": "optional<string>",
            "firstName": "string",
            "id": "string",
            "lastName": "string",
            "modifiedAt": "string",
            "phone": "optional<string>",
            "policies": "list<string>",
            "refreshedAt": "string",
          },
        },
        "GetAccountResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<Account>",
            "success": "optional<root.Success>",
          },
        },
        "Policy": {
          "docs": "A Policy represents a specific policy associated with an Account and includes high-level policy information (e.g. policy number) and any children objects (e.g., coverages) associated with the policy.",
          "properties": {
            "account": "string",
            "address": "root.Address",
            "carrier": "string",
            "coverages": {
              "docs": "",
              "type": "list<root.Coverage>",
            },
            "createdAt": "string",
            "effectiveDate": "string",
            "expirationDate": "string",
            "id": "string",
            "insureds": {
              "docs": "",
              "type": "list<root.Insured>",
            },
            "isActive": "boolean",
            "modifiedAt": "string",
            "policyNumber": "string",
            "properties": {
              "docs": "",
              "type": "list<root.Property>",
            },
            "refreshedAt": "string",
            "thirdParties": {
              "docs": "",
              "type": "list<root.ThirdParty>",
            },
            "type": "PolicyType",
          },
        },
        "PolicyType": {
          "enum": [
            "auto",
            "motorcycle",
          ],
        },
      },
    },
    "carriers.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "GetCarrier": {
            "auth": false,
            "display-name": "Get Carrier",
            "docs": "The Get Carrier method returns a Carrier object that include additional details about an Axle-supported insurance carrier.",
            "examples": [
              {
                "headers": {
                  "x-client-id": "x-client-id",
                  "x-client-secret": "x-client-secret",
                },
                "path-parameters": {
                  "id": "id",
                },
                "response": {
                  "body": {
                    "data": {
                      "address": {
                        "addressLine1": "addressLine1",
                        "addressLine2": "addressLine2",
                        "city": "city",
                        "country": "country",
                        "postalCode": "postalCode",
                        "state": "state",
                      },
                      "domain": "domain",
                      "id": "id",
                      "logoUrl": "logoUrl",
                      "modifiedAt": "modifiedAt",
                      "name": "name",
                      "phone": "phone",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/carriers/{id}",
            "path-parameters": {
              "id": {
                "docs": "The unique ID for the requested carrier. Returned in Account and Policy objects as \`carrier\`.",
                "type": "string",
              },
            },
            "request": {
              "headers": {
                "x-client-id": {
                  "docs": "Your client ID. This will be shared with you during onboarding.",
                  "name": "clientId",
                  "type": "string",
                },
                "x-client-secret": {
                  "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
                  "name": "clientSecret",
                  "type": "string",
                },
              },
              "name": "GetCarrierRequest",
            },
            "response": {
              "docs": "",
              "type": "GetCarrierResponse",
            },
          },
          "GetCarriers": {
            "auth": false,
            "display-name": "Get Carriers",
            "docs": "The Get Carriers method returns an array of Carrier objects.",
            "examples": [
              {
                "headers": {
                  "x-client-id": "x-client-id",
                  "x-client-secret": "x-client-secret",
                },
                "response": {
                  "body": {
                    "data": [
                      {
                        "address": {},
                        "domain": "domain",
                        "id": "id",
                        "logoUrl": "logoUrl",
                        "modifiedAt": "modifiedAt",
                        "name": "name",
                        "phone": "phone",
                      },
                    ],
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/carriers",
            "request": {
              "headers": {
                "x-client-id": {
                  "docs": "Your client ID. This will be shared with you during onboarding.",
                  "name": "clientId",
                  "type": "string",
                },
                "x-client-secret": {
                  "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
                  "name": "clientSecret",
                  "type": "string",
                },
              },
              "name": "GetCarriersRequest",
            },
            "response": {
              "docs": "",
              "type": "GetCarriersResponse",
            },
          },
        },
      },
      "types": {
        "GetCarrierResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<root.Carrier>",
            "success": "optional<root.Success>",
          },
        },
        "GetCarriersResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<list<root.Carrier>>",
            "success": "optional<root.Success>",
          },
        },
      },
    },
    "ignition.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "StartIgnition": {
            "auth": false,
            "display-name": "Start Ignition",
            "docs": "Start an Ignition session. Returns the ignitionUri to direct the user to authenticate.",
            "examples": [
              {
                "headers": {
                  "x-client-id": "x-client-id",
                  "x-client-secret": "x-client-secret",
                },
                "request": {
                  "redirectUri": "https://example.com/redirect",
                  "webhookUri": "https://example.com/webhook",
                },
                "response": {
                  "body": {
                    "data": {
                      "ignitionToken": "ur7EPeAa0km4wRlDrPJ4Z",
                      "ignitionUri": "https://ignition.dev.axle.insure/?token=ur7EPeAa0km4wRlDrPJ4Z",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/ignition",
            "request": {
              "body": {
                "properties": {
                  "metadata": {
                    "docs": "Optional object to store ephermeral information about the session, such as \`reservationTime\`. Will be returned in webhook events.",
                    "type": "optional<map<string, unknown>>",
                  },
                  "redirectUri": {
                    "docs": "The URI we should direct the user to after authenticating successfully.",
                    "type": "optional<string>",
                  },
                  "user": "optional<root.User>",
                  "webhookUri": {
                    "docs": "The URI we should send updates about this session or the resulting account to.",
                    "type": "optional<string>",
                  },
                },
              },
              "headers": {
                "x-client-id": {
                  "docs": "Your client ID. This will be shared with you during onboarding.",
                  "name": "clientId",
                  "type": "string",
                },
                "x-client-secret": {
                  "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
                  "name": "clientSecret",
                  "type": "string",
                },
              },
              "name": "StartIgnitionRequest",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "",
              "type": "StartIgnitionResponse",
            },
          },
        },
      },
      "types": {
        "StartIgnitionResponse": {
          "docs": "",
          "properties": {
            "data": "StartIgnitionResponseData",
            "success": "root.Success",
          },
        },
        "StartIgnitionResponseData": {
          "docs": undefined,
          "properties": {
            "ignitionToken": {
              "docs": "The unique ID for the ignition session.",
              "type": "string",
            },
            "ignitionUri": {
              "docs": "The url you should direct the user to to link their account.",
              "type": "string",
            },
          },
        },
      },
    },
    "policies.yml": {
      "imports": {
        "accounts": "accounts.yml",
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "GetPolicy": {
            "auth": false,
            "display-name": "Get Policy",
            "docs": "The Get Policy method returns a Policy object including high-level policy information (e.g., policy number) and any children objects (e.g., Coverages) associated with the Policy. Please note that this method will NOT refresh the Policy object.",
            "examples": [
              {
                "headers": {
                  "x-client-id": "x-client-id",
                  "x-client-secret": "x-client-secret",
                },
                "path-parameters": {
                  "id": "id",
                },
                "response": {
                  "body": {
                    "data": {
                      "account": "account",
                      "address": {
                        "addressLine1": "addressLine1",
                        "addressLine2": "addressLine2",
                        "city": "city",
                        "country": "country",
                        "postalCode": "postalCode",
                        "state": "state",
                      },
                      "carrier": "carrier",
                      "coverages": [
                        {
                          "code": "BI",
                          "label": "Bodily Injury Liability",
                          "limitPerAccident": 500000,
                          "limitPerPerson": 250000,
                        },
                      ],
                      "createdAt": "createdAt",
                      "effectiveDate": "effectiveDate",
                      "expirationDate": "expirationDate",
                      "id": "id",
                      "insureds": [
                        {
                          "dateOfBirth": "",
                          "dateOfBirthYear": "1993",
                          "firstName": "Armaan",
                          "lastName": "Sikand",
                          "licenseNo": "•••••7259",
                          "licenseState": "GA",
                          "licenseStatus": "Valid",
                          "type": "Primary named insured",
                        },
                      ],
                      "isActive": true,
                      "modifiedAt": "modifiedAt",
                      "policyNumber": "policyNumber",
                      "properties": [
                        {
                          "data": {
                            "make": "TRIUMPH",
                            "model": "STREET SCRAMBLER",
                            "vin": "SMTD44GN3HT812287",
                            "year": "2017",
                          },
                          "id": "prp_uSdzLVpi8c76H7kl6AQ-F",
                          "type": "vehicle",
                        },
                      ],
                      "refreshedAt": "refreshedAt",
                      "thirdParties": [
                        {
                          "address": {
                            "addressLine1": "Po Box 105205",
                            "city": "Atlanta",
                            "postalCode": "30348-5205",
                            "state": "GA",
                          },
                          "name": "Georgias Own Credit Union",
                          "type": "lienholder",
                        },
                      ],
                      "type": "auto",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/policies/{id}",
            "path-parameters": {
              "id": {
                "docs": "The unique ID for the requested policy. Returned by Get Account for each Policy associated with the Account.",
                "type": "string",
              },
            },
            "request": {
              "headers": {
                "x-client-id": {
                  "docs": "Your client ID. This will be shared with you during onboarding.",
                  "name": "clientId",
                  "type": "string",
                },
                "x-client-secret": {
                  "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
                  "name": "clientSecret",
                  "type": "string",
                },
              },
              "name": "GetPolicyRequest",
              "query-parameters": {
                "expand": {
                  "docs": "Set to *true* if you would like to expand related entities (e.g., account, policy). Defaults to *false*.",
                  "type": "optional<boolean>",
                },
              },
            },
            "response": {
              "docs": "",
              "type": "GetPolicyResponse",
            },
          },
        },
      },
      "types": {
        "GetPolicyResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<accounts.Policy>",
            "success": "optional<root.Success>",
          },
        },
      },
    },
    "tokens.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "ExchangeToken": {
            "auth": false,
            "display-name": "Exchange Token",
            "docs": "Exchange an authorization code for an access token. Ignition returns an authCode as a query parameter at the redirectUrl upon successful completion of the Ignition flow.

Auth codes are ephemeral and expire after 10 minutes, while accessTokens do not expire.",
            "examples": [
              {
                "headers": {
                  "x-client-id": "x-client-id",
                  "x-client-secret": "x-client-secret",
                },
                "request": {
                  "authCode": "authCode",
                },
                "response": {
                  "body": {
                    "data": {
                      "accessToken": "accessToken",
                      "account": "account",
                      "policies": [
                        {
                          "key": "value",
                        },
                      ],
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/token/exchange",
            "request": {
              "body": {
                "properties": {
                  "authCode": {
                    "docs": "The authorization code obtained after a user successfully links their account via Ignition. Returned as a query parameter at the redirectUri.",
                    "type": "string",
                  },
                },
              },
              "headers": {
                "x-client-id": {
                  "docs": "Your client ID. This will be shared with you during onboarding.",
                  "name": "clientId",
                  "type": "string",
                },
                "x-client-secret": {
                  "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
                  "name": "clientSecret",
                  "type": "string",
                },
              },
              "name": "ExchangeTokenRequest",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "",
              "type": "ExchangeTokenResponse",
            },
          },
        },
      },
      "types": {
        "ExchangeTokenResponse": {
          "docs": "",
          "properties": {
            "data": "ExchangeTokenResponseData",
            "success": "root.Success",
          },
        },
        "ExchangeTokenResponseData": {
          "docs": undefined,
          "properties": {
            "accessToken": {
              "docs": "The token required for access to the requested Account and Policy objects.",
              "type": "string",
            },
            "account": {
              "docs": "The unique id for the Account object.",
              "type": "string",
            },
            "policies": {
              "docs": "List of unique ids for the Policy objects. If Ignition is configured to select a single policy (as is the default), the list will only contain 1 item.",
              "type": "list<unknown>",
            },
          },
        },
      },
    },
  },
  "packageMarkerFile": {
    "types": {
      "Address": {
        "docs": undefined,
        "properties": {
          "addressLine1": "optional<string>",
          "addressLine2": "optional<string>",
          "city": "optional<string>",
          "country": "optional<string>",
          "postalCode": "optional<string>",
          "state": "optional<string>",
        },
      },
      "Carrier": {
        "docs": undefined,
        "properties": {
          "address": "Address",
          "domain": "string",
          "id": "string",
          "logoUrl": "optional<string>",
          "modifiedAt": "string",
          "name": "string",
          "phone": "string",
        },
      },
      "Coverage": {
        "docs": undefined,
        "properties": {
          "code": "CoverageCode",
          "deductible": "optional<integer>",
          "label": "string",
          "limitPerAccident": "optional<integer>",
          "limitPerPerson": "optional<integer>",
          "property": "optional<string>",
        },
      },
      "CoverageCode": {
        "enum": [
          "BI",
          "PD",
          "UMBI",
          "UMPD",
          "UIMBI",
          "UIMPD",
          "COLL",
          "COMP",
        ],
      },
      "Error": {
        "docs": undefined,
        "properties": {
          "message": {
            "docs": "Provides a reason for why the operation failed, if available.",
            "type": "optional<string>",
          },
          "success": "optional<Success>",
        },
      },
      "Insured": {
        "docs": undefined,
        "properties": {
          "dateOfBirth": "optional<string>",
          "dateOfBirthYear": "optional<string>",
          "firstName": "string",
          "lastName": "string",
          "licenseNo": "optional<string>",
          "licenseState": "optional<string>",
          "licenseStatus": "optional<string>",
          "property": "optional<string>",
          "type": "optional<string>",
        },
      },
      "Property": {
        "docs": undefined,
        "properties": {
          "data": "Vehicle",
          "id": "string",
          "type": "literal<"vehicle">",
        },
      },
      "Success": {
        "docs": "Indicates whether the operation was performed successfully.",
        "type": "boolean",
      },
      "ThirdParty": {
        "docs": undefined,
        "properties": {
          "address": "optional<Address>",
          "name": "string",
          "property": "optional<string>",
          "type": {
            "default": "interest",
            "type": "ThirdPartyType",
          },
        },
      },
      "ThirdPartyType": {
        "default": "interest",
        "enum": [
          "lienholder",
          "lessor",
          "interest",
        ],
      },
      "User": {
        "docs": "User to attach to Ignition session. If user is set, unique \`id\` must be provided.",
        "properties": {
          "email": {
            "docs": "User's email address.",
            "type": "optional<string>",
          },
          "firstName": {
            "docs": "User's first name.",
            "type": "optional<string>",
          },
          "id": {
            "docs": "Your application's unique user id.",
            "type": "string",
          },
          "lastName": {
            "docs": "User's last name.",
            "type": "optional<string>",
          },
          "phone": {
            "docs": "User's phone number in E.164 format.",
            "type": "optional<string>",
          },
        },
      },
      "Vehicle": {
        "docs": undefined,
        "properties": {
          "bodyStyle": "optional<string>",
          "make": "string",
          "model": "string",
          "vin": "string",
          "year": "string",
        },
      },
    },
  },
  "rootApiFile": {
    "auth": "apiKeyAuth",
    "auth-schemes": {
      "apiKeyAuth": {
        "header": "x-access-token",
        "name": "apiKey",
        "type": "string",
      },
    },
    "default-environment": "Production",
    "display-name": "Axle API",
    "environments": {
      "Production": "https://api.axle.insure",
      "Sandbox": "https://sandbox.axle.insure",
    },
    "error-discrimination": {
      "strategy": "status-code",
    },
    "name": "api",
  },
}
`;

exports[`open api parser axle simple 1`] = `
{
  "definitionFiles": {
    "accounts.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "GetAccount": {
            "auth": false,
            "display-name": "Get Account",
            "docs": "The Get Account method will return an Account object including high-level account information (e.g., name) and any children objects (e.g., Policies) associated with the Account. Please note that this method will NOT refresh the Account object.",
            "examples": [
              {
                "headers": {},
                "path-parameters": {
                  "id": "id",
                },
                "response": {
                  "body": {
                    "data": {
                      "carrier": "carrier",
                      "createdAt": "createdAt",
                      "email": "email",
                      "firstName": "firstName",
                      "id": "id",
                      "lastName": "lastName",
                      "modifiedAt": "modifiedAt",
                      "phone": "phone",
                      "policies": [
                        "policies",
                      ],
                      "refreshedAt": "refreshedAt",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/accounts/{id}",
            "path-parameters": {
              "id": {
                "docs": "The unique ID for the requested account. Returned as part of the Token Exchange flow in exchangeToken.",
                "type": "string",
              },
            },
            "request": {
              "name": "GetAccountRequest",
              "query-parameters": {
                "expand": {
                  "docs": "Set to *true* if you would like to expand related entities (e.g., account, policy). Defaults to *false*.",
                  "type": "optional<boolean>",
                },
              },
            },
            "response": {
              "docs": "",
              "type": "GetAccountResponse",
            },
          },
        },
      },
      "types": {
        "Account": {
          "docs": "An Account represents an account with an insurance carrier and includes high-level account information (e.g. name) and any Policy objects associated with the Account.",
          "properties": {
            "carrier": "string",
            "createdAt": "string",
            "email": "optional<string>",
            "firstName": "string",
            "id": "string",
            "lastName": "string",
            "modifiedAt": "string",
            "phone": "optional<string>",
            "policies": "list<string>",
            "refreshedAt": "string",
          },
        },
        "GetAccountResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<Account>",
            "success": "optional<root.Success>",
          },
        },
        "Policy": {
          "docs": "A Policy represents a specific policy associated with an Account and includes high-level policy information (e.g. policy number) and any children objects (e.g., coverages) associated with the policy.",
          "properties": {
            "account": "string",
            "address": "root.Address",
            "carrier": "string",
            "coverages": {
              "docs": "",
              "type": "list<root.Coverage>",
            },
            "createdAt": "string",
            "effectiveDate": "string",
            "expirationDate": "string",
            "id": "string",
            "insureds": {
              "docs": "",
              "type": "list<root.Insured>",
            },
            "isActive": "boolean",
            "modifiedAt": "string",
            "policyNumber": "string",
            "properties": {
              "docs": "",
              "type": "list<root.Property>",
            },
            "refreshedAt": "string",
            "thirdParties": {
              "docs": "",
              "type": "list<root.ThirdParty>",
            },
            "type": "PolicyType",
          },
        },
        "PolicyType": {
          "enum": [
            "auto",
            "motorcycle",
          ],
        },
      },
    },
    "carriers.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "GetCarrier": {
            "auth": false,
            "display-name": "Get Carrier",
            "docs": "The Get Carrier method returns a Carrier object that include additional details about an Axle-supported insurance carrier.",
            "examples": [
              {
                "headers": {},
                "path-parameters": {
                  "id": "id",
                },
                "response": {
                  "body": {
                    "data": {
                      "address": {
                        "addressLine1": "addressLine1",
                        "addressLine2": "addressLine2",
                        "city": "city",
                        "country": "country",
                        "postalCode": "postalCode",
                        "state": "state",
                      },
                      "domain": "domain",
                      "id": "id",
                      "logoUrl": "logoUrl",
                      "modifiedAt": "modifiedAt",
                      "name": "name",
                      "phone": "phone",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/carriers/{id}",
            "path-parameters": {
              "id": {
                "docs": "The unique ID for the requested carrier. Returned in Account and Policy objects as \`carrier\`.",
                "type": "string",
              },
            },
            "response": {
              "docs": "",
              "type": "GetCarrierResponse",
            },
          },
          "GetCarriers": {
            "auth": false,
            "display-name": "Get Carriers",
            "docs": "The Get Carriers method returns an array of Carrier objects.",
            "examples": [
              {
                "headers": {},
                "response": {
                  "body": {
                    "data": [
                      {
                        "address": {},
                        "domain": "domain",
                        "id": "id",
                        "logoUrl": "logoUrl",
                        "modifiedAt": "modifiedAt",
                        "name": "name",
                        "phone": "phone",
                      },
                    ],
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/carriers",
            "response": {
              "docs": "",
              "type": "GetCarriersResponse",
            },
          },
        },
      },
      "types": {
        "GetCarrierResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<root.Carrier>",
            "success": "optional<root.Success>",
          },
        },
        "GetCarriersResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<list<root.Carrier>>",
            "success": "optional<root.Success>",
          },
        },
      },
    },
    "ignition.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "StartIgnition": {
            "auth": false,
            "display-name": "Start Ignition",
            "docs": "Start an Ignition session. Returns the ignitionUri to direct the user to authenticate.",
            "examples": [
              {
                "headers": {},
                "request": {
                  "redirectUri": "https://example.com/redirect",
                  "webhookUri": "https://example.com/webhook",
                },
                "response": {
                  "body": {
                    "data": {
                      "ignitionToken": "ur7EPeAa0km4wRlDrPJ4Z",
                      "ignitionUri": "https://ignition.dev.axle.insure/?token=ur7EPeAa0km4wRlDrPJ4Z",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/ignition",
            "request": {
              "body": {
                "properties": {
                  "metadata": {
                    "docs": "Optional object to store ephermeral information about the session, such as \`reservationTime\`. Will be returned in webhook events.",
                    "type": "optional<map<string, unknown>>",
                  },
                  "redirectUri": {
                    "docs": "The URI we should direct the user to after authenticating successfully.",
                    "type": "optional<string>",
                  },
                  "user": "optional<root.User>",
                  "webhookUri": {
                    "docs": "The URI we should send updates about this session or the resulting account to.",
                    "type": "optional<string>",
                  },
                },
              },
              "headers": undefined,
              "name": "StartIgnitionRequest",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "",
              "type": "StartIgnitionResponse",
            },
          },
        },
      },
      "types": {
        "StartIgnitionResponse": {
          "docs": "",
          "properties": {
            "data": "StartIgnitionResponseData",
            "success": "root.Success",
          },
        },
        "StartIgnitionResponseData": {
          "docs": undefined,
          "properties": {
            "ignitionToken": {
              "docs": "The unique ID for the ignition session.",
              "type": "string",
            },
            "ignitionUri": {
              "docs": "The url you should direct the user to to link their account.",
              "type": "string",
            },
          },
        },
      },
    },
    "policies.yml": {
      "imports": {
        "accounts": "accounts.yml",
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "GetPolicy": {
            "auth": false,
            "display-name": "Get Policy",
            "docs": "The Get Policy method returns a Policy object including high-level policy information (e.g., policy number) and any children objects (e.g., Coverages) associated with the Policy. Please note that this method will NOT refresh the Policy object.",
            "examples": [
              {
                "headers": {},
                "path-parameters": {
                  "id": "id",
                },
                "response": {
                  "body": {
                    "data": {
                      "account": "account",
                      "address": {
                        "addressLine1": "addressLine1",
                        "addressLine2": "addressLine2",
                        "city": "city",
                        "country": "country",
                        "postalCode": "postalCode",
                        "state": "state",
                      },
                      "carrier": "carrier",
                      "coverages": [
                        {
                          "code": "BI",
                          "label": "Bodily Injury Liability",
                          "limitPerAccident": 500000,
                          "limitPerPerson": 250000,
                        },
                      ],
                      "createdAt": "createdAt",
                      "effectiveDate": "effectiveDate",
                      "expirationDate": "expirationDate",
                      "id": "id",
                      "insureds": [
                        {
                          "dateOfBirth": "",
                          "dateOfBirthYear": "1993",
                          "firstName": "Armaan",
                          "lastName": "Sikand",
                          "licenseNo": "•••••7259",
                          "licenseState": "GA",
                          "licenseStatus": "Valid",
                          "type": "Primary named insured",
                        },
                      ],
                      "isActive": true,
                      "modifiedAt": "modifiedAt",
                      "policyNumber": "policyNumber",
                      "properties": [
                        {
                          "data": {
                            "make": "TRIUMPH",
                            "model": "STREET SCRAMBLER",
                            "vin": "SMTD44GN3HT812287",
                            "year": "2017",
                          },
                          "id": "prp_uSdzLVpi8c76H7kl6AQ-F",
                          "type": "vehicle",
                        },
                      ],
                      "refreshedAt": "refreshedAt",
                      "thirdParties": [
                        {
                          "address": {
                            "addressLine1": "Po Box 105205",
                            "city": "Atlanta",
                            "postalCode": "30348-5205",
                            "state": "GA",
                          },
                          "name": "Georgias Own Credit Union",
                          "type": "lienholder",
                        },
                      ],
                      "type": "auto",
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/policies/{id}",
            "path-parameters": {
              "id": {
                "docs": "The unique ID for the requested policy. Returned by Get Account for each Policy associated with the Account.",
                "type": "string",
              },
            },
            "request": {
              "name": "GetPolicyRequest",
              "query-parameters": {
                "expand": {
                  "docs": "Set to *true* if you would like to expand related entities (e.g., account, policy). Defaults to *false*.",
                  "type": "optional<boolean>",
                },
              },
            },
            "response": {
              "docs": "",
              "type": "GetPolicyResponse",
            },
          },
        },
      },
      "types": {
        "GetPolicyResponse": {
          "docs": undefined,
          "properties": {
            "data": "optional<accounts.Policy>",
            "success": "optional<root.Success>",
          },
        },
      },
    },
    "tokens.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "ExchangeToken": {
            "auth": false,
            "display-name": "Exchange Token",
            "docs": "Exchange an authorization code for an access token. Ignition returns an authCode as a query parameter at the redirectUrl upon successful completion of the Ignition flow.

Auth codes are ephemeral and expire after 10 minutes, while accessTokens do not expire.",
            "examples": [
              {
                "headers": {},
                "request": {
                  "authCode": "authCode",
                },
                "response": {
                  "body": {
                    "data": {
                      "accessToken": "accessToken",
                      "account": "account",
                      "policies": [
                        {
                          "key": "value",
                        },
                      ],
                    },
                    "success": true,
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/token/exchange",
            "request": {
              "body": {
                "properties": {
                  "authCode": {
                    "docs": "The authorization code obtained after a user successfully links their account via Ignition. Returned as a query parameter at the redirectUri.",
                    "type": "string",
                  },
                },
              },
              "headers": undefined,
              "name": "ExchangeTokenRequest",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "",
              "type": "ExchangeTokenResponse",
            },
          },
        },
      },
      "types": {
        "ExchangeTokenResponse": {
          "docs": "",
          "properties": {
            "data": "ExchangeTokenResponseData",
            "success": "root.Success",
          },
        },
        "ExchangeTokenResponseData": {
          "docs": undefined,
          "properties": {
            "accessToken": {
              "docs": "The token required for access to the requested Account and Policy objects.",
              "type": "string",
            },
            "account": {
              "docs": "The unique id for the Account object.",
              "type": "string",
            },
            "policies": {
              "docs": "List of unique ids for the Policy objects. If Ignition is configured to select a single policy (as is the default), the list will only contain 1 item.",
              "type": "list<unknown>",
            },
          },
        },
      },
    },
  },
  "packageMarkerFile": {
    "types": {
      "Address": {
        "docs": undefined,
        "properties": {
          "addressLine1": "optional<string>",
          "addressLine2": "optional<string>",
          "city": "optional<string>",
          "country": "optional<string>",
          "postalCode": "optional<string>",
          "state": "optional<string>",
        },
      },
      "Carrier": {
        "docs": undefined,
        "properties": {
          "address": "Address",
          "domain": "string",
          "id": "string",
          "logoUrl": "optional<string>",
          "modifiedAt": "string",
          "name": "string",
          "phone": "string",
        },
      },
      "Coverage": {
        "docs": undefined,
        "properties": {
          "code": "CoverageCode",
          "deductible": "optional<integer>",
          "label": "string",
          "limitPerAccident": "optional<integer>",
          "limitPerPerson": "optional<integer>",
          "property": "optional<string>",
        },
      },
      "CoverageCode": {
        "enum": [
          "BI",
          "PD",
          "UMBI",
          "UMPD",
          "UIMBI",
          "UIMPD",
          "COLL",
          "COMP",
        ],
      },
      "Error": {
        "docs": undefined,
        "properties": {
          "message": {
            "docs": "Provides a reason for why the operation failed, if available.",
            "type": "optional<string>",
          },
          "success": "optional<Success>",
        },
      },
      "Insured": {
        "docs": undefined,
        "properties": {
          "dateOfBirth": "optional<string>",
          "dateOfBirthYear": "optional<string>",
          "firstName": "string",
          "lastName": "string",
          "licenseNo": "optional<string>",
          "licenseState": "optional<string>",
          "licenseStatus": "optional<string>",
          "property": "optional<string>",
          "type": "optional<string>",
        },
      },
      "Property": {
        "docs": undefined,
        "properties": {
          "data": "Vehicle",
          "id": "string",
          "type": "literal<"vehicle">",
        },
      },
      "Success": {
        "docs": "Indicates whether the operation was performed successfully.",
        "type": "boolean",
      },
      "ThirdParty": {
        "docs": undefined,
        "properties": {
          "address": "optional<Address>",
          "name": "string",
          "property": "optional<string>",
          "type": {
            "default": "interest",
            "type": "ThirdPartyType",
          },
        },
      },
      "ThirdPartyType": {
        "default": "interest",
        "enum": [
          "lienholder",
          "lessor",
          "interest",
        ],
      },
      "User": {
        "docs": "User to attach to Ignition session. If user is set, unique \`id\` must be provided.",
        "properties": {
          "email": {
            "docs": "User's email address.",
            "type": "optional<string>",
          },
          "firstName": {
            "docs": "User's first name.",
            "type": "optional<string>",
          },
          "id": {
            "docs": "Your application's unique user id.",
            "type": "string",
          },
          "lastName": {
            "docs": "User's last name.",
            "type": "optional<string>",
          },
          "phone": {
            "docs": "User's phone number in E.164 format.",
            "type": "optional<string>",
          },
        },
      },
      "Vehicle": {
        "docs": undefined,
        "properties": {
          "bodyStyle": "optional<string>",
          "make": "string",
          "model": "string",
          "vin": "string",
          "year": "string",
        },
      },
    },
  },
  "rootApiFile": {
    "auth": "apiKeyAuth",
    "auth-schemes": {
      "apiKeyAuth": {
        "header": "x-access-token",
        "name": "apiKey",
        "type": "string",
      },
    },
    "default-environment": "Production",
    "display-name": "Axle API",
    "environments": {
      "Production": "https://api.axle.insure",
      "Sandbox": "https://sandbox.axle.insure",
    },
    "error-discrimination": {
      "strategy": "status-code",
    },
    "headers": {
      "x-client-id": {
        "docs": "Your client ID. This will be shared with you during onboarding.",
        "name": "clientId",
        "type": "string",
      },
      "x-client-secret": {
        "docs": "Your secret API key. This will be shared with you during onboarding and should be considered sensitive - it’s a password after all!",
        "name": "clientSecret",
        "type": "string",
      },
    },
    "name": "api",
  },
}
`;
